2009-4-13  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-22.
    * delete the option n.adapt for jags() and incorporate that into n.burnin
      This is to make jags() more consistent with bugs().

2009-3-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-21.
    * pass option "progress.bar" to functions

2009-3-8  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-20.
    * n.adpate in jags.model now set to 0 but use adapte() to adapte 
      jags.model.

2009-3-7  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-19.
    * add refresh rate option for the progress bar.


2009-3-4  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-17.
    * R/as.bugs.array2: provide by Eduardo Leoni to fix dimension problem of jags output.
        (It is actually the problem of as.bugs.array.  JAGS simply returns different dimenstion.
        So we need new as.bugs.array2 here.  Right now, keep it Internal, maybe export later!)

2009-2-23  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-16.
    * R/jags: nchain --> n.chains (changed by rjags)


2009-2-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-15.
    * R/jags: inits=NULL, let jags gen inits


2009-1-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-14.
    * R/traceplot: add traceplot generic and rjags method
    * R/jags: fix the bug when n.burnin=0


2008-11-6  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-13.
    * R/recompile: update set to 100 to ensure complete adaptation


2008-10-17  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-12.
    * man/recompile: documentation for recompile.
    * R/recompile: new function to pick up previous saved rjags object.


2008-10-7  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-11.